--- a/res/layout/activity_s3_dbc.xml
+++ b/res/layout/activity_s3_dbc.xml
@@ -14,15 +14,16 @@
         <TextView
         android:id="@+id/textView1"
         android:text="usrname:"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/usrname_field"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
-
+        android:layout_height="wrap_content" 
+        android:inputType="text"     
+        >
         <requestFocus />
     </EditText>
 
@@ -34,20 +35,16 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/password_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="Login " />
+        android:layout_height="wrap_content"      
+        android:text="Login" />
         
         
     </LinearLayout>
