--- a/res/layout/activity_file_upload.xml
+++ b/res/layout/activity_file_upload.xml
@@ -29,7 +29,7 @@
     </EditText>
 
     <TextView
-        android:id="@+id/rule_id_input"
+        android:id="@+id/rule_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="rule id:"
